# hogg

./: .gitignore  README  README.md  Setup.hs  TODO  hogg.1  hogg.cabal  index.html  ogg.hs
Codec/Container/Ogg/: ByteFields.hs  Chain.hs  Chop.hs  ContentType.hs  Dump.hs  Headers.hs  List.hs  ListMerge.hs  MessageHeaders.hs  Packet.hs  Page.hs  Serial.hs  Skeleton.hs  Sort.hs  TimeScheme.hs  Timestamp.hs  Track.hs  Utils.hs
Ogg/: ByteFields.hs  CRC.hs  Chain.hs  Demux.hs  Dump.hs  Granulepos.hs  Granulerate.hs  ListMerge.hs  Packet.hs  Page.hs  RawPage.hs  Skeleton.hs  Timestamp.hs  Track.hs
_publish/: Makefile
hogg/: Utils.hs  hogg.cabal
hogg/Ogg/: Demux.hs
hogg/tools/: hogg-dump.hs  hogg-pagedump.hs
ogg/: ogg.hs
release_notes/: hogg-0.4.1.txt
tests/: ListMergeTest.hs
tools/: hogg-dump.hs  hogg-pagecount.hs  hogg-pagedump.hs  hogg.hs
