Name:                hogg
Version:             0.1
Description:         Ogg interface
License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          conradp@cse.unsw.edu.au
Build-Depends:       base, fps, HUnit
Exposed-modules:     Ogg.Chain
                     Ogg.RawPage
                     Ogg.Page
                     Ogg.Packet
                     Ogg.Granulepos
                     Ogg.Granulerate
                     Ogg.Track
                     Ogg.Timestamp
Other-modules:       Ogg.Utils
                     Ogg.ByteFields
                     Ogg.CRC
                     Ogg.Dump
                     Ogg.ListMerge
ghc-options:         -Wall -fglasgow-exts -O2 -funbox-strict-fields 
-- ghc-options:         -prof -auto-all

Executable:          hogg
Main-Is:             hogg.hs
Hs-Source-Dirs:      ., tools

Executable:          ListMergeTest
Main-Is:             ListMergeTest.hs
Hs-Source-Dirs:      ., tests
