Name:                hogg
Version:             0.1
License:             BSD3
License-file:        LICENSE
Copyright:           Conrad Parker, 2006
Author:              Conrad Parker
Maintainer:          conradp@cse.unsw.edu.au
Stability:           experimental
Homepage:            http://www.annodex.net/~conrad/software/hogg.html
Synopsis:            Library and tools to manipulate the Ogg container format
Description:
  The HOgg package provides a commandline tool for manipulating Ogg files.
  It supports chained and multiplexed Ogg bitstreams and Ogg Skeleton.
  HOgg also includes a library that may be used by other packages for handling
  the Ogg container format.
Category:            Codec
Build-Depends:       base, fps, mtl, HUnit
Exposed-modules:     Ogg.Chain
                     Ogg.RawPage
                     Ogg.Page
                     Ogg.Packet
                     Ogg.Granulepos
                     Ogg.Granulerate
                     Ogg.Skeleton
                     Ogg.Track
                     Ogg.Timestamp
Other-modules:       Ogg.Utils
                     Ogg.ByteFields
                     Ogg.CRC
                     Ogg.Dump
                     Ogg.ListMerge
ghc-options:         -Wall -fglasgow-exts -O2 -funbox-strict-fields 
-- ghc-options:         -prof -auto-all

Executable:          hogg
Main-Is:             hogg.hs
Hs-Source-Dirs:      ., tools

Executable:          ListMergeTest
Main-Is:             ListMergeTest.hs
Hs-Source-Dirs:      ., tests
